_Important/ChainOfProxyCall/k8s/chain-of-proxy-call-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: chain-of-proxy-call
  name: chain-of-proxy-call
  namespace: chain-of-proxy-call
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: chain-of-proxy-call
  type: ClusterIP
status:
  loadBalancer: {}
