_Important/ChainOfProxyCall/k8s/chain-of-proxy-call-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: chain-of-proxy-call-ingress
  namespace: chain-of-proxy-call
spec:
  rules:
  - host: chainofproxy.local
    http:
      paths:
      - backend:
          service:
            name: chain-of-proxy-call
            port:
              number: 80      # servie can run on multiuple ports, so specify the port here
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
